tests/snapshots/mark_test__all_lowercase_marks.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 1
[l]ine 2
line 3
