tests/snapshots/mark_test__backtick_caret_insert_exit.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
textline 1
[l]ine 2
