tests/snapshots/mark_test__backtick_exact_position.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:15
Lines: 1

Buffer:
hello world tes[t]
