tests/snapshots/mark_test__backtick_jump_to_mark.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 3

Buffer:
line [1]
line 2
line 3
