tests/snapshots/mark_test__backtick_multiple_marks.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 4

Buffer:
line 1
line [2]
line 3
line 4
