tests/snapshots/mark_test__change_to_mark.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 3

Buffer:
line 1
HANGE[D]
line 3
