tests/snapshots/mark_test__complex_mark_navigation.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 5

Buffer:
[l]ine 1
line 2
line 3
line 4
line 5
