tests/snapshots/mark_test__ctrl_i_jump_forward.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 4

Buffer:
[l]ine 1
line 2
line 3
line 4
