tests/snapshots/mark_test__delete_to_mark.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 4

Buffer:
line 1
line 2
[l]ine 3
line 4
