tests/snapshots/mark_test__global_mark.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:9
Lines: 3

Buffer:
line 1G`A[ ]
line 2
line 3
